# SummerSchool_IPSA_2025_ROS

./: README.md  install_dependencies.sh
ss_desc/: CMakeLists.txt  package.xml
ss_desc/hooks/: ss_desc.sh.in
ss_desc/xacro/: materials.xacro
ss_desc/xacro/x500/: x500.gazebo  x500.xacro  x500_macro.xacro
ss_nav/: package.xml  setup.cfg  setup.py
ss_nav/launch/: mission_launch.py
ss_nav/ss_nav/: mission.py
ss_plugins/: CMakeLists.txt  package.xml
ss_plugins/include/ss_plugins/: QuadController.hh
ss_plugins/src/: QuadController.cc
ss_simu/: CMakeLists.txt  package.xml
ss_simu/config/: config.rviz  config_drone.rviz  ros_gz_bridge.yaml
ss_simu/launch/: spawn_robot_launch.py  start_world_launch.py  xacro_rviz_launch.py
ss_simu/worlds/: env1.world
